Fixed size of about text on mobile view

--- a/client/style.scss
+++ b/client/style.scss
@@ -428,7 +428,7 @@ $autocolor: false // When true, all the above colors will be derived from $backg
 
   .team-text-mobile {
     color: $dark-color;
-    font-size: 1px;
+    font-size: 75%;
   }
 
   /*LIKE BUTTON DIRECTIVE*/
